--- a/index.html
+++ b/index.html
@@ -1034,7 +1034,7 @@
                                 <input type="text" id="docCompany" placeholder="เช่น บริษัท ABC จำกัด">
                             </div>
                             <div class="input-group">
-                                <label for="docReceiveDate">วันที่รับเข้า/วันก่อหนี้</label>
+                                <label for="docReceiveDate">วันก่อหนี้</label>
                                 <input type="date" id="docReceiveDate">
                             </div>
                         
@@ -1217,7 +1217,7 @@
                             <input type="text" id="editDocCompany">
                         </div>
                         <div class="input-group">
-                            <label for="editDocReceiveDate">วันที่รับเข้า/วันก่อหนี้</label>
+                            <label for="editDocReceiveDate">วันก่อหนี้</label>
                             <input type="date" id="editDocReceiveDate">
                         </div>
                     </div>
