--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
                                 <th>จำนวนเงิน</th>
                                 <th>สถานะปัจจุบัน</th>
                                 <th>ความคืบหน้า</th>
-                                <th>วันที่รับเข้า</th>
+                                <th>วันก่อหนี้</th>
                                 <th>หมายเหตุ</th>
                                 <th>การจัดการ</th>
                             </tr>
