--- a/index.html
+++ b/index.html
@@ -1266,6 +1266,9 @@
     </div>
 
     <script>
+        function getValidReceiveDate(doc) {
+    return doc.receiveDate ? formatThaiDate(doc.receiveDate) : formatThaiDate(doc.createdDate);
+}
         // Global variables
         const steps = [
             'ลงรับของเข้าคลัง',
@@ -2092,7 +2095,7 @@
                                 <span style="font-weight: 600; color: #333; min-width: 40px;">${Math.round(progress)}%</span>
                             </div>
                         </td>
-                        <td>${formatThaiDate(doc.receiveDate)}</td>
+                        <td>${getValidReceiveDate(doc)}</td>
                         <td>
                             <div style="max-width: 150px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="${doc.note || ''}">
                                 ${doc.note || '-'}
