--- a/index.html
+++ b/index.html
@@ -1269,6 +1269,37 @@
         function getValidReceiveDate(doc) {
     return doc.receiveDate ? formatThaiDate(doc.receiveDate) : formatThaiDate(doc.createdDate);
 }
+        
+        function convertBuddhistToGregorian(dateStr) {
+    if (!dateStr || typeof dateStr !== 'string') return null;
+
+    let cleanDate = dateStr.split('T')[0];
+    const parts = cleanDate.split('-');
+    if (parts.length !== 3) return null;
+
+    let year = parseInt(parts[0], 10);
+    const month = parseInt(parts[1], 10) - 1;
+    const day = parseInt(parts[2], 10);
+
+    if (year > 2400) {
+        year -= 543;
+    }
+
+    return new Date(year, month, day);
+}
+
+function formatThaiDateSafely(dateStr) {
+    const date = convertBuddhistToGregorian(dateStr);
+    if (!date || isNaN(date.getTime())) return '-';
+
+    return date.toLocaleDateString('th-TH', {
+        year: 'numeric',
+        month: 'short',
+        day: 'numeric'
+    });
+}
+
+        
         // Global variables
         const steps = [
             'ลงรับของเข้าคลัง',
@@ -2095,7 +2126,8 @@
                                 <span style="font-weight: 600; color: #333; min-width: 40px;">${Math.round(progress)}%</span>
                             </div>
                         </td>
-                        <td>${getValidReceiveDate(doc)}</td>
+                        <td>${formatThaiDateSafely(doc.receiveDate || doc.createdDate)}</td>
+
                         <td>
                             <div style="max-width: 150px; overflow: hidden; text-overflow: ellipsis; white-space: nowrap;" title="${doc.note || ''}">
                                 ${doc.note || '-'}
